fix: some layout problems

--- a/style.css
+++ b/style.css
@@ -10,14 +10,17 @@ html {
 
 .wrapper {
   max-width: 1280px;
+  width: 100%;
   height: 100vh;
   margin: 0 auto;
-  padding: 40px;
+  padding: 40px 18px 40px;
 }
 
 .textarea {
   width: 100%;
-  height: 35%;
+  max-height: 35%;
+  min-height: 110px;
+  height: 100%;
   border-radius: 30px;
   padding: 30px;
   resize: none;
@@ -27,7 +30,7 @@ html {
 
 .keyboard {
   width: 100%;
-  height: 50%;
+  height: 410px;
   border-radius: 10px;
   margin-top: 40px;
   background-color: rgb(209, 239, 239);
@@ -58,14 +61,10 @@ html {
 }
 
 .Backspace {
-  width: 145px;
+  width: 190px;
 }
 
 .Tab {
-  width: 110px;
-}
-
-.Backslash {
   width: 110px;
 }
 
@@ -74,19 +73,23 @@ html {
 }
 
 .Enter {
-  width: 170px;
+  width: 215px;
 }
 
 .ShiftLeft {
-  width: 150px;
+  width: 172px;
 }
 
 .ShiftRight {
-  width: 150px;
+  width: 172px;
 }
 
 .ControlLeft {
-  width: 130px;
+  width: 158px;
+}
+
+.ControlRight {
+  width: 90px;
 }
 
 .AltLeft {
